--- a/test_run.ipynb
+++ b/test_run.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 8,
    "id": "717b1bb6",
    "metadata": {},
    "outputs": [
@@ -10,6 +10,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "(105890, 2)\n",
       "0\n"
      ]
     },
@@ -77,80 +78,43 @@
        "4              Aero Dynamics (Pvt) Ltd.               5"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
+    "'''\n",
+    "Preparing the Dataset\n",
+    "'''\n",
+    "\n",
+    "### Import Packages ###\n",
     "import pandas as pd\n",
     "import string\n",
     "from cleanco import cleanco\n",
     "from collections import Counter\n",
     "from fuzzywuzzy import fuzz\n",
+    "import matplotlib.pyplot as plt\n",
+    "%matplotlib inline\n",
     "\n",
+    "### Read the Dataset, dealing with missing values ###\n",
     "missing_values = [\"n/a\", \"na\", \"--\"]\n",
     "df = pd.read_csv('Test_Names.csv', na_values=missing_values).dropna()\n",
-    "print(df.isnull().values.sum())\n",
     "\n",
+    "### Exlpore the Dataset ###\n",
+    "# Checking the number of rows and cols\n",
+    "print(df.shape) #(105890, 2)\n",
+    "\n",
+    "# Checking the number of missing values\n",
+    "print(df.isnull().values.sum()) \n",
+    "\n",
+    "# Dataset Preview\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
-   "id": "c2855305",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "To The Order                                 1510\n",
-       "Hayleys Free Zone Ltd.                       1094\n",
-       "Hirdaramani International Exp. Pvt., Ltd.     749\n",
-       "(Camso Loadstar ( Pivt ) Ltd.)                653\n",
-       "Mas Intimates                                 500\n",
-       "Mas Active Trading Pvt., Ltd.                 483\n",
-       "Akbar Brothers (Pvt) Ltd.                     471\n",
-       "Sri Lankan Airlines                           409\n",
-       "Trelleborg Lanka (Pvt) Ltd.                   360\n",
-       "Brandix Apparel Ltd.                          351\n",
-       "Name: domestic, dtype: int64"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df['domestic'].value_counts().head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "id": "8a21ce8e",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(105890, 2)"
-      ]
-     },
-     "execution_count": 39,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "7f20437b",
    "metadata": {},
    "outputs": [
@@ -158,7 +122,6 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "15453\n",
       "['lanka', 'international', 'trading', 'ceylon', 'enterprises', 'holdings', 'industries', 'products', 'global', 'gems', 'engineering', 'services', 'food', 'logistics']\n"
      ]
     },
@@ -251,46 +214,53 @@
        "4   NaN  "
       ]
      },
-     "execution_count": 4,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "names = df['domestic'].unique()\n",
-    "print(len(names))\n",
+    "'''\n",
+    "Parsing the company names\n",
+    "    * Assign a group by the first letter\n",
+    "    * Remove the punctuations\n",
+    "        - Use 'string' library\n",
+    "    * Remove the legal control terms\n",
+    "        - Use 'cleanco' python library\n",
+    "        - Create a stopwords list\n",
+    "    * Lowercase the letters\n",
+    "    * Create a list of most common words appear in the company names to penalize when matching the names\n",
+    "        - Use 'collection' library\n",
+    "'''\n",
     "\n",
+    "# Create a Dataframe to save the matched names\n",
     "df_match = pd.DataFrame(columns=['group','original','cleaned','alias','score'])\n",
+    "# Get a list of unique company names \n",
+    "names = df['domestic'].unique()\n",
+    "# Sort the names in alphabetical order\n",
     "names.sort()\n",
+    "# Assign values to the Dataframe\n",
     "df_match['original'] = names\n",
     "df_match['cleaned'] = names\n",
     "df_match['group'] = df_match['original'].apply(lambda x: x[0])\n",
+    "# Parse the names - remove puctuations, legal control terms, change all to the lowercase\n",
     "df_match['cleaned'] = df_match['cleaned'].apply(lambda x: x.translate(str.maketrans('', '', string.punctuation)))\n",
     "df_match['cleaned'] = df_match['cleaned'].apply(lambda x: cleanco(x).clean_name())\n",
     "df_match['cleaned'] = df_match['cleaned'].apply(lambda x: x.lower())\n",
-    "\n",
+    "# Remove the stopwords in the company name\n",
     "stopwords = ['pvt', 'exp', 'ltd', 'lt', 'co', 'corp']\n",
     "df_match['cleaned'] = df_match['cleaned'].apply(lambda x: ' '.join([word for word in x.split(\" \") if word not in stopwords]))\n",
     "\n",
+    "# Find the most appearing words in the company name\n",
     "word_counter = Counter()\n",
     "for name in df_match['cleaned'].unique():\n",
     "    word_counter.update(str(name).split(\" \"))\n",
     "key_words = [word for (word,_) in word_counter.most_common(30)]\n",
     "key_words = [word for word in key_words if len(word)>3]\n",
+    "# Show the top 30 most common names\n",
     "print(key_words)\n",
     "\n",
-    "# def remove_key_word(name):\n",
-    "\n",
-    "#     # output = True\n",
-    "#     for key in key_words:\n",
-    "#         if key in name:\n",
-    "#             name = name.replace(key, \"\")\n",
-    "#             # output = False\n",
-    "#     return name\n",
-    "\n",
-    "# df_match['cleaned'] = df_match['cleaned'].apply(lambda x: remove_key_word(x))\n",
-    "\n",
-    "\n",
+    "# Dataset preview\n",
     "df_match.head()"
    ]
   },
@@ -301,161 +271,90 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "def check_keywords(name):\n",
+    "    '''\n",
+    "    Return if the keyword exist in the name\n",
+    "    '''\n",
+    "    is_key_in_name = True\n",
+    "    for word in key_words:\n",
+    "        if word in name:\n",
+    "            is_key_in_name = False\n",
+    "    return is_key_in_name\n",
+    "\n",
+    "# Get unique groups of the names - first letter of the names\n",
     "sort_groups = df_match['group'].unique()\n",
     "\n",
-    "def no_key_word(name):\n",
-    "    output = True\n",
-    "    for key in key_words:\n",
-    "        if key in name:\n",
-    "            output = False\n",
-    "    return output\n",
+    "'''\n",
+    "Matching the company names\n",
+    "    * For each alphabet group, check the similarity scores with other grouped names\n",
+    "        - Use 'fuzzywuzzy' package\n",
+    "        : fuzzywuzzy uses the 'levenshtein' distance to calculate the similarity\n",
+    "        : fuzzywuzzy takes the whitespace into account as well as the order of the words\n",
+    "'''\n",
     "\n",
+    "def match_levenshtein(df_match, start_idx, end_idx, parsed_col='cleaned', alias_col='alias', score_col='score'):\n",
+    "    for i in range(start_idx, end_idx+1):\n",
+    "        if pd.isna(df_match[alias_col].iloc[i]):\n",
+    "            df_match[alias_col].iloc[i] = df_match[parsed_col].iloc[i]\n",
+    "            df_match[score_col].iloc[i] = 100\n",
+    "\n",
+    "        for j in range(i+1, end_idx+1):\n",
+    "            if pd.isna(df_match[alias_col].iloc[j]):\n",
+    "                match_score = fuzz.token_sort_ratio(df_match[parsed_col].iloc[i],df_match[parsed_col].iloc[j])\n",
+    "                if not check_keywords(df_match[parsed_col].iloc[j]):\n",
+    "                    match_score -= 20\n",
+    "                if (match_score > 80):\n",
+    "                    df_match[alias_col].iloc[j] = df_match[alias_col].iloc[i]\n",
+    "                    df_match[score_col].iloc[j] = match_score\n",
+    "                    \n",
+    "    return None\n",
+    "\n",
+    "# Match the names for each name group\n",
     "for group in sort_groups:\n",
     "    curr_group = df_match.groupby(['group']).get_group(group)\n",
     "    start_idx = curr_group.index.min()\n",
     "    end_idx = curr_group.index.max()\n",
-    "\n",
-    "    for i in range(start_idx, end_idx+1):\n",
-    "        if pd.isna(df_match['alias'].iloc[i]):\n",
-    "            df_match['alias'].iloc[i] = df_match['cleaned'].iloc[i]\n",
-    "            df_match['score'].iloc[i] = 100\n",
-    "\n",
-    "        for j in range(i+1, end_idx+1):\n",
-    "            if pd.isna(df_match['alias'].iloc[j]):\n",
-    "                match_score = fuzz.token_sort_ratio(df_match['cleaned'].iloc[i],df_match['cleaned'].iloc[j])\n",
-    "                if not no_key_word(df_match['cleaned'].iloc[j]):\n",
-    "                    match_score -= 30\n",
-    "                if (match_score > 80):\n",
-    "                    df_match['alias'].iloc[j] = df_match['alias'].iloc[i]\n",
-    "                    df_match['score'].iloc[j] = match_score\n",
-    "                    \n",
+    "    \n",
+    "    match_levenshtein(df_match, start_idx, end_idx)\n",
+    "            \n",
+    "# Assign a unique identifier to each alias name\n",
     "df_match = df_match.assign(uid=(df_match['alias'].astype('category').cat.codes))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 6,
    "id": "eb9734cf",
    "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_match['domestic'] = df_match['original']"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "id": "9c3b839a",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df_final = pd.merge(df['domestic'], df_match[['domestic', 'alias', 'uid']], on='domestic')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 45,
-   "id": "6f1ee02c",
-   "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "(105890, 3)"
-      ]
-     },
-     "execution_count": 45,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(105890, 3)\n"
+     ]
     }
    ],
    "source": [
-    "df_final.shape"
+    "'''\n",
+    "Merging the original dataset with the matched name dataset\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "# Change the 'original' column name to 'domestic' to match with the original dataset\n",
+    "df_match['domestic'] = df_match['original']\n",
+    "\n",
+    "# Merge two datasets\n",
+    "df_final = pd.merge(df['domestic'], df_match[['domestic', 'alias', 'uid']], on='domestic')\n",
+    "\n",
+    "# Checking the number of rows and cols\n",
+    "print(df_final.shape) #(105890, 3)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
-   "id": "dc4597ca",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import matplotlib.pyplot as plt\n",
-    "%matplotlib inline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 9,
    "id": "a0684863",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "count = df_final['alias'].value_counts().head(10)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "60c29b3a",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['to the order', 'hayleys free zone', 'hirdaramani international',\n",
-       "       'camso loadstar pivt', 'd p l premier gloves', 'mas active trading',\n",
-       "       'akbar bros', 'dipped products', 'mas intimates',\n",
-       "       'industrial clothing'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "count.index"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 48,
-   "id": "aa23f9b8",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "array([1510, 1094,  787,  653,  566,  558,  550,  536,  502,  494])"
-      ]
-     },
-     "execution_count": 48,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "count.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 49,
-   "id": "dca7d6b2",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# names = df_match[df_match['uid'].isin(count.index)]['alias'].unique()\n",
-    "names = count.index\n",
-    "values = count.values"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 50,
-   "id": "61901b9e",
    "metadata": {},
    "outputs": [
     {
@@ -472,6 +371,17 @@
     }
    ],
    "source": [
+    "'''\n",
+    "Identifying the 10 most active firms\n",
+    "\n",
+    "'''\n",
+    "\n",
+    "# Count the occurence for each 'alias' value\n",
+    "count = df_final['alias'].value_counts().head(10)\n",
+    "\n",
+    "# Create a chart to present the result\n",
+    "names = count.index\n",
+    "values = count.values\n",
     "fig = plt.figure(figsize=(10,5))\n",
     "plt.bar(names, values, color='maroon', width=0.4)\n",
     "plt.xlabel(\"Company\")\n",
