--- a/test_run.ipynb
+++ b/test_run.ipynb
@@ -583,7 +583,7 @@
     "values = count.values\n",
     "fig, ax = plt.subplots(figsize =(16, 9))\n",
     "ax.barh(names, values)\n",
-    "plt.xlabel(\"NUmber of Transactions\")\n",
+    "plt.xlabel(\"Number of Transactions\")\n",
     "plt.xticks()\n",
     "for i, v in enumerate(values):\n",
     "    ax.text(v + 3, i + .25, str(v), color='black', fontweight='bold')\n",
